Fix Hero image width on small screen

--- a/src/css/component/hero.css
+++ b/src/css/component/hero.css
@@ -1,6 +1,7 @@
 .hero {
 	margin-left: calc(0px - var(--margin-left-body));
-	margin-right: calc(
+	margin-right: min(
+		0px,
 		0px - 100vw + var(--margin-left-body) + var(--width-gap) +
 			var(--width-column) + var(--width-gap) + var(--width-scrollbar)
 	);
